[tool.poetry]
name = "plotly_ab_theme"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
plotly = "4.3.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.3"
pandas = "^0.25.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
