[tool.poetry]
name = "plotly_ab_theme"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
plotly = "4.3.0"
voila = "^0.1.20"
jupytext = "^1.3.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.3"
pandas = "^0.25.3"
jupyterlab_code_formatter = {version = "^1.0.3", optional = true}
isort = {version = "^4.3.21", optional = true}
pylama = {version = "^7.7.1", optional = true}
black = {version = "^19.10b0", optional = true, allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
